# jp-landxml

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: sample_landxml.xml
old/: README.md  debug_geotiff_position.rs  dem_tests.rs  export_tests.rs  geometry.rs  main.rs  parser.rs  parser_tests.rs
old/dem/: geotiff_writer.rs  mod.rs
src/: error.rs  export.rs  geometry.rs  lib.rs  main.rs  models.rs  parser.rs
src/alignment/: coord_geom.rs
src/alignments/: mod.rs
src/application/: mod.rs
src/cg_points/: mod.rs
src/coordinate_system/: jlandxml.rs  mod.rs  parser.rs  standard.rs
src/dem/: grid.rs  triangulation.rs
src/jlandxml/: coordinate_systems.rs  mod.rs  models.rs  parser.rs
src/project/: mod.rs
src/roadways/: mod.rs
src/surfaces/: mod.rs
src/units/: mod.rs
tests/: export_tests.rs  geometry_tests.rs  geotiff_position_test.rs.bak  jlandxml_comprehensive_tests.rs  jlandxml_tests.rs  parser_tests.rs  sample_xml_tests.rs
tests/data/: J-LandXML_schema_v17.xsd  j_landxml_sample.xml
