[package]
name = "jp-landxml"
version = "0.1.0"
edition = "2021"

[dependencies]
# XMLパース
quick-xml = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 幾何計算
nalgebra = "0.32"
geo = "0.26"

# エラーハンドリング
thiserror = "1.0"
anyhow = "1.0"

# 文字列処理
regex = "1.0"
encoding_rs = "0.8"

# DEM/GIS機能
gdal = "0.18.0"
rayon = "1.10.0"

# CLI機能（オプション）
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
